Fix Alignment issues in monitoring agents
CMK-28815

--- a/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
@@ -72,6 +72,9 @@
 
 .wato div.inherited {
   color: $font-color-dimmed;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
 
   a {
     color: $font-color-dimmed;
